# medicine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  pyproject.toml  requirements.txt  setup.py
assets/css/: style.scss
medicine/: __init__.py  logger.py  model.py  plotting.py  run.py
medicine_demos/: run_demo.py
medicine_demos/example_dataset/: convert_example.ipynb  peak_amplitudes.npy  peak_depths.npy  peak_times.npy
