[project]
name = "medicine-neuro"
version = "1.6"
description = "MEDiCINe: Motion Estimation by Distributional Contrastive Inference for Neurophysiology."
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "torch >= 2.5.0",
    "seaborn >= 0.13.2",
    "scipy >= 1.13.1",
    "tqdm >= 4.66.6",
]
license = {file = "LICENSE"}
keywords = [
    "neuroscience",
    "neurophysiology",
    "spike sorting",
    "machine learning",
    "motion",
    "python",
]
authors = [
    {email = "nwatters@mit.edu"},
    {name = "Nick Watters"},
]
maintainers = [
    {name = "Nick Watters", email = "nwatters@mit.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools]
packages = ["medicine", "medicine_demos"]

[tool.setuptools.package-data]
"medicine_demos" = ["example_dataset/*.npy"]

[project.urls]
homepage = "https://jazlab.github.io/medicine.github.io"
documentation = "https://jazlab.github.io/medicine.github.io"
repository = "https://github.com/jazlab/medicine.github.io"
pypi = "https://pypi.org/project/medicine-neuro"
